fix: ajuster l'alignement des éléments dans le conteneur de travail du photographe

--- a/css/photographer-page.css
+++ b/css/photographer-page.css
@@ -229,7 +229,7 @@
 .photographer-work__container {
   display: flex;
   flex-flow: row wrap;
-  justify-content: center;
+  justify-content: flex-start;
   align-items: center;
   gap: 95px;
   row-gap: 20px;
